# simplenet

./: LICENSE
src/: IProtocolHandler.h  IProtocolMessage.h  Network.cpp
src/simplenet/: Network.cpp  Network.h  ProtocolHandlerRegistry.h  ProtocolMessageFactory.cpp
src/test/: CMakeLists.txt  NetworkTest.cpp  TestAll.cpp
